For Java19 version